// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb> when has custom <ComponentLink> when modal is closed should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              data-testid="custom-link"
              href="#item-0"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 1
              </span>
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown"
            >
              <button
                class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-name="more-horizontal"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              data-testid="custom-link"
              href="#item-4"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 5
              </span>
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            data-testid="custom-link"
            href="#item-0"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 1
            </span>
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown"
          >
            <button
              class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-name="more-horizontal"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    r="1"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            data-testid="custom-link"
            href="#item-4"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 5
            </span>
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has custom <ComponentLink> when modal is open should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              data-testid="custom-link"
              href="#item-0"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 1
              </span>
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown toggle-dropdown--is-open"
            >
              <button
                class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-name="more-horizontal"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </span>
              </button>
              <div>
                <div
                  class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                  data-testid="toggle-dropdown-list"
                >
                  <ul
                    class="dropdown-menu__list"
                  >
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        data-testid="custom-link"
                        href="#item-1"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 2
                        </span>
                      </a>
                    </li>
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        data-testid="custom-link"
                        href="#item-2"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 3
                        </span>
                      </a>
                    </li>
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        data-testid="custom-link"
                        href="#item-3"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 4
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              data-testid="custom-link"
              href="#item-4"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 5
              </span>
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            data-testid="custom-link"
            href="#item-0"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 1
            </span>
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown toggle-dropdown--is-open"
          >
            <button
              class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-name="more-horizontal"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    r="1"
                  />
                </svg>
              </span>
            </button>
            <div>
              <div
                class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                data-testid="toggle-dropdown-list"
              >
                <ul
                  class="dropdown-menu__list"
                >
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      data-testid="custom-link"
                      href="#item-1"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 2
                      </span>
                    </a>
                  </li>
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      data-testid="custom-link"
                      href="#item-2"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 3
                      </span>
                    </a>
                  </li>
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      data-testid="custom-link"
                      href="#item-3"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 4
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            data-testid="custom-link"
            href="#item-4"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 5
            </span>
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has less than 4 items should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-0"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 1
              </span>
            </a>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-1"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 2
              </span>
            </a>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-2"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 3
              </span>
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-0"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 1
            </span>
          </a>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-1"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 2
            </span>
          </a>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-2"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 3
            </span>
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has more than 3 items When modal is closed should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-0"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 1
              </span>
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown"
            >
              <button
                class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-name="more-horizontal"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-3"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 4
              </span>
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-0"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 1
            </span>
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown"
          >
            <button
              class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-name="more-horizontal"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    r="1"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-3"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 4
            </span>
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has more than 3 items when modal is open should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-0"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 1
              </span>
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown toggle-dropdown--is-open"
            >
              <button
                class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-name="more-horizontal"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </span>
              </button>
              <div>
                <div
                  class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                  data-testid="toggle-dropdown-list"
                >
                  <ul
                    class="dropdown-menu__list"
                  >
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        class="dropdown-menu-item"
                        href="#item-1"
                        tabindex="0"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 2
                        </span>
                      </a>
                    </li>
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        class="dropdown-menu-item"
                        href="#item-2"
                        tabindex="0"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 3
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              href="#item-3"
            >
              <span
                class="subtitle subtitle--size-md"
              >
                Label 4
              </span>
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-0"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 1
            </span>
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown toggle-dropdown--is-open"
          >
            <button
              class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-name="more-horizontal"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="19"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    r="1"
                  />
                </svg>
              </span>
            </button>
            <div>
              <div
                class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                data-testid="toggle-dropdown-list"
              >
                <ul
                  class="dropdown-menu__list"
                >
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      class="dropdown-menu-item"
                      href="#item-1"
                      tabindex="0"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 2
                      </span>
                    </a>
                  </li>
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      class="dropdown-menu-item"
                      href="#item-2"
                      tabindex="0"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 3
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            href="#item-3"
          >
            <span
              class="subtitle subtitle--size-md"
            >
              Label 4
            </span>
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
